fixing to work with docker